# PM-Pilot

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: feishu-as-pmagent-server-layer-analysis.md  feishu-cli-capability-research.md  issue-5-agent-delegated-observation-plan.md  pmagent-current-feishu-claw-dev-slice-plan.md  pmagent-debate-alignment-summary.md  pmagent-debate-design.md  pmagent-debate-final-summary.md  pmagent-debate-hooks-integration.md  pmagent-debate-implementation-plan.md  pmagent-feishu-file-layer-dev-doc-design.md  pmagent-hooks-enforcement-design.md  pmagent-project-deep-dive-for-resume.md  pmagent-three-layer-implementation-guide.md  pmagent-three-layer-product-model.md  pmagent-unified-target-modification-plan.md  pmagent-workflow-with-hooks.md  readme.html
src/pmagent/: __init__.py  advisor.py  cli.py  cli_debate.py  cli_helpers.py  cli_phases.py  cli_routing.py  cli_scaffold.py  cli_workspace.py  conflicts.py  current_state.py  default_config.yaml  dev.py  exporter.py  goal_state.py  infra.py  launchd.py  linker.py  paths.py  presentation.py  readiness.py  retrieval.py  setup_guide.py  skills_sync.py  web_search.py  weekly.py
src/pmagent/debate/: config.py  (+2 more)
tests/: test_advisor.py  test_cli.py  test_cli_subsystems.py  test_concrete_pm_infra_flow.py  test_debate_timeouts.py  test_executors.py  test_hooks.py  test_host_agent_scaffold.py  test_init_upgrade.py  test_lark_wiki_push.py  test_observation_agent.py  test_observation_cli.py  test_observation_scheduler.py  test_paths.py  test_presentation.py  test_readiness.py  test_switcher.py
(+80 files in other folders)
